--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/About Me"
-        android:title="@string/aboutme_text" />
+        android:id="@+id/AboutMe"
+        android:title="@string/aboutmeFragment" />
     <item
         android:id="@+id/Contact"
-        android:title="@string/contact_text" />
+        android:title="@string/contactFragment" />
 </menu>
