Add data binding

--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="contactViewModel"
+            type="com.example.firstappfinish.ContactViewModel" />
     </data>
 
     <FrameLayout
