ปรับปรุงไฟล์  fragment_contact.xml

--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="contactViewModel"
             type="com.example.firstappfinish.ContactViewModel" />
@@ -20,33 +21,34 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editTextTextEmailAddress"
+                android:id="@+id/editTextTextPersonName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:baselineAligned="false"
                 android:ems="10"
-                android:inputType="textEmailAddress" />
+                android:inputType="text" />
 
             <EditText
-                android:id="@+id/editTextPhone"
-                android:layout_width="422dp"
+                android:id="@+id/editTextTextPersonPhone"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="phone"
-                android:autofillHints="" />
+                android:inputType="text" />
 
             <Button
-                android:id="@+id/button"
-                android:layout_width="match_parent"
+                android:id="@+id/buttonInsert"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/SENT" />
+                android:onClick="@{()->contactViewModel.onContactAdd()}"
+                android:text="Button" />
 
             <TextView
+                android:id="@+id/textview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/HELLO" />
+                android:text="@{contactViewModel.contactString}" />
 
         </LinearLayout>
 
     </FrameLayout>
+
 </layout>
