**First App finish.

--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -12,6 +12,9 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bk4"
+        android:scrollbarThumbHorizontal="@color/colorAccent"
+        android:scrollbarThumbVertical="@color/colorAccent"
         tools:context=".ContactFragment">
 
         <!-- TODO: Update blank fragment layout -->
@@ -26,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:fontFamily="@font/boogaloo"
                 android:inputType="textEmailAddress" />
 
             <EditText
@@ -33,12 +37,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:fontFamily="@font/boogaloo"
                 android:inputType="phone" />
 
             <Button
                 android:id="@+id/buttonInsert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/boogaloo"
                 android:onClick="@{()->contactViewModel.onContactAdd()}"
                 android:text="@string/SENT" />
 
