--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -4,8 +4,10 @@
 
     <item
         android:id="@+id/aboutmeFragment"
+        android:icon="@drawable/ic_baseline_favorite_24"
         android:title="About me" />
     <item
         android:id="@+id/contactFragment"
+        android:icon="@drawable/ic_baseline_face_24"
         android:title="Contact" />
 </menu>
